tests/NormalTests/paczka1/small_fuzzy/29202862.err
Error in line 7: S426 S435 115,7
Error in line 8: S426 S407 44,2
Error in line 13: S426 S426 67,2
